<resources>
    <string name="app_name">UIpractise</string>
    <string name="login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="frgt">Forgot password?</string>
    <string name="No_account"> Do not have an account ?</string>
    <string name="tv_forgot">Please enter your mobile number
to reset your password.</string>
    <string name="continue_text">Continue</string>
    <string name="tv_forgotPass">Forgot Password</string>
    <string name="phone_no">0123456789</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="contact_number">Contact number</string>
    <string name="contact">contact</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="cnfrm_pass">Confirm password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="driver_name">Driver name:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="network_view">Networks View</string>
    <string name="payments">Payment</string>
    <string name="action_settings">Settings</string>
    <string name="history">Job History</string>
    <string name="emergency"> Emergency Contacts</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="support">Support via Call/Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="job_history">Job History</string>
    <string name="missed_jobs">Missed Jobs</string>
    <string name="ride_time">Ride time:20min</string>
    <string name="amount_pay">Total Amount Payable</string>
    <string name="data">Data</string>
    <string name="mode">Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key">AIzaSyAlp1GOZJa2YWyCX47wDEZy16_ZNzwqeK0</string>
    <string name="maps">Maps And Location</string>
</resources>
