<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:orientation="vertical"
    tools:context="com.example.saurabh.uipractise.LoginActivity">
    <ImageView
        android:id="@+id/iv_logo"
        style="@style/LogoLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:src="@drawable/logo" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            >



            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon_layout"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/ButtonLayout"
                    android:layout_below="@+id/iv_logo"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/bgBlue"
                    android:hint="                        abc@gmail.com"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp"
                    android:textColor="@color/bgBlue"
                    android:textColorHint="@color/bgBlue"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="50"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_email"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon_layout"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/ButtonLayout"
                    android:layout_below="@+id/iv_logo"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/bgBlue"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:textColor="@color/bgBlue"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:textColorHint="@color/bgBlue"
                    android:hint="@string/password"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonLayout"
                android:layout_below="@+id/ll_password"
                android:layout_marginTop="16dp"
                android:background="@color/bgBlue"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_frgt"
                style="@style/ButtonLayout"
                android:layout_below="@+id/btn_login"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/frgt"
                android:textColor="@color/bgBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_frgt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_noAccount"
                    style="@style/ButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:text="@string/No_account"
                    android:textColor="@color/bgBlue" />

                <TextView
                    android:id="@+id/tv_signUp"
                    style="@style/ButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@+id/tv_noAccount"
                    android:clickable="true"
                    android:text="@string/SignUp"
                    android:textColor="@color/bgBlue"
                    android:textStyle="bold" />


            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


